2015-07-22  Luiz Irber  <khmer@luizirber.org>

   * scripts/unique-kmers.py: fix import bug and initialize to_print earlier.
   * tests/test_scripts: add tests for unique-kmers.py.
   * sandbox/unique-kmers.py: moved to scripts.

2015-07-21  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/{kfile,khmer_args}.py: refactored information passing, made it so
   space checks happen in the right directory.
   * oxli/build_graph.py,sandbox/collect-reads.py,scripts/{
   abundance-dist-single,filter-abund-single,load-into-counting,
   normalize-by-median,trim-low-abund}.py,tests/test_script_arguments.py:
   changed to use new arg structure for checking hashtable save space.
   * oxli/functions.py,scripts/saturate-by-median.py: updated error message
   to mention --force option.
   * scripts/{count-overlap,load-into-counting,make-initial-stoptags,
   partition-graph,sample-reads-randomly}.py: removed unnecessary call to
   check_space.

2015-07-20  Titus Brown  <titus@idyll.org>

   * khmer/__init__.py: cleaned up FP rate reporting.
   * scripts/normalize-by-median.py: corrected epilog; refactored reporting
   to be a bit cleaner; use CSV for reporting file;
   added --report-frequency arg.
   * tests/test_normalize_by_median.py: updated/added tests for reporting.

2015-07-17  Jacob Fenton  <bocajnotnef@gmail.com>

   * oxli/{functions,build_graph}.py,scripts/{load-graph,normalize-by-median,
   abundance-dist}.py,tests/test_{normalize_by_median,subset_graph,hashbits,
   oxli_function}.py: pylint cleanup.

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>  

   * Makefile, tests/test_read_aligner.py: import khmer when pylinting.

2015-07-17  Michael R. Crusoe  <crusoe@ucdavis.edu>

   * lib/read_parser.{cc,hh}: use std::string everywhere to match existing
   exceptions.

2015-07-10  Jacob Fenton  <bocajnotnef@gmail.com>

   * khmer/kfile.py: changed check_valid_file_exists to recognize fifos as
   non-empty.
   * tests/test_normalize_by_median.py: added test.
