@@ -3,6 +3,7 @@
    * scripts/unique-kmers.py: fix import bug and initialize to_print earlier.
    * tests/test_scripts: add tests for unique-kmers.py.
    * sandbox/unique-kmers.py: moved to scripts.
+   * doc/user/scripts.rst: added unique-kmers.py to script page
 
 2015-07-21  Jacob Fenton  <bocajnotnef@gmail.com>
 
